@@ -28,6 +28,15 @@ public class Install
 {
 	public static void main(String[] args)
 	{
+		String javaVersion = System.getProperty("java.version");
+		if(javaVersion.compareTo("1.3") < 0)
+		{
+			System.err.println("You are running Java version "
+				+ javaVersion + ".");
+			System.err.println("This installer requires Java 1.3 or later.");
+			System.exit(1);
+		}
+
 		if(args.length == 0)
 		{
 			MetalLookAndFeel.setCurrentTheme(new JEditMetalTheme());
